--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,13 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-
+    "baseUrl": "src",
+    //esto es necesario para utilizar el @, especificas que hace con esas rutas
+    "paths": {
+      "@/components/*": ["components/*"],
+      "@/views/*": ["views/*"],
+      "@/layouts/*": ["layouts/*"]
+    },
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
